Upgrading github actions (#57)
* Upgrading github actions

* Adapted pom files for java 25

* upgraded gradle version for kotlin

* dotnet quality needs to be ga

* Update Gradle build command to write info messages

* github action for gradle

# Conflicts:
#	.github/workflows/kotlin-spring.yml

* specify vendor for java toolchain

---------

Co-authored-by: Joachim Grüneis <joachim@grueneis.at>