@@ -33,7 +33,6 @@
                     <proc>full</proc>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
